--- a/work.html
+++ b/work.html
@@ -75,7 +75,113 @@
 
 
   </style>
+  <script>
+(() => {
+  const root = document.getElementById("bgGrid");
+  if (!root) return;
 
+  const GREEN_CLASS = "on";
+
+  // ✅ tweak knobs
+  const CELL_SIZE = 18;        // must match CSS .cell width/height
+  const GAP = 6;               // must match CSS grid gap
+  const PAD = 10;              // must match CSS grid padding
+  const SPARKS_PER_MOVE = 6;   // minimal amount of squares
+  const RADIUS_PX = 55;        // small random area around cursor/finger
+  const LINGER_MS = 400;       // how long it stays green
+
+  let gridEl, cells = [];
+  let cols = 0, rows = 0;
+
+  let raf = null;
+  let mx = -9999, my = -9999;
+
+  function build(){
+    root.innerHTML = "";
+    gridEl = document.createElement("div");
+    gridEl.className = "grid";
+    root.appendChild(gridEl);
+
+    const w = window.innerWidth;
+    const h = window.innerHeight;
+
+    cols = Math.floor((w - PAD * 2 + GAP) / (CELL_SIZE + GAP));
+    rows = Math.floor((h - PAD * 2 + GAP) / (CELL_SIZE + GAP));
+
+    gridEl.style.gridTemplateColumns = `repeat(${cols}, ${CELL_SIZE}px)`;
+
+    const total = cols * rows;
+    cells = new Array(total);
+
+    for (let i = 0; i < total; i++){
+      const c = document.createElement("div");
+      c.className = "cell";
+      gridEl.appendChild(c);
+      cells[i] = c;
+    }
+  }
+
+  function idxFromXY(x, y){
+    const gx = (x - PAD) / (CELL_SIZE + GAP);
+    const gy = (y - PAD) / (CELL_SIZE + GAP);
+    const cx = Math.floor(gx);
+    const cy = Math.floor(gy);
+    if (cx < 0 || cy < 0 || cx >= cols || cy >= rows) return -1;
+    return cy * cols + cx;
+  }
+
+  function spark(x, y){
+    for (let i = 0; i < SPARKS_PER_MOVE; i++){
+      const a = Math.random() * Math.PI * 2;
+      const r = Math.random() * RADIUS_PX;
+      const px = x + Math.cos(a) * r;
+      const py = y + Math.sin(a) * r;
+
+      const idx = idxFromXY(px, py);
+      if (idx < 0) continue;
+
+      const el = cells[idx];
+      if (!el) continue;
+
+      el.classList.add(GREEN_CLASS);
+      clearTimeout(el._t);
+      el._t = setTimeout(() => el.classList.remove(GREEN_CLASS), LINGER_MS);
+    }
+  }
+
+  function queueSpark(x, y){
+    mx = x; my = y;
+    if (raf) return;
+    raf = requestAnimationFrame(() => {
+      spark(mx, my);
+      raf = null;
+    });
+  }
+
+  // ✅ Pointer events (desktop + many mobiles)
+  function onPointerMove(e){ queueSpark(e.clientX, e.clientY); }
+  function onPointerDown(e){ queueSpark(e.clientX, e.clientY); }
+
+  // ✅ Touch fallback (iOS Safari can be picky)
+  function onTouch(e){
+    const t = e.touches && e.touches[0];
+    if (!t) return;
+    queueSpark(t.clientX, t.clientY);
+  }
+
+  build();
+
+  window.addEventListener("resize", build, { passive: true });
+
+  // Pointer
+  window.addEventListener("pointermove", onPointerMove, { passive: true });
+  window.addEventListener("pointerdown", onPointerDown, { passive: true });
+
+  // Touch fallback
+  window.addEventListener("touchstart", onTouch, { passive: true });
+  window.addEventListener("touchmove", onTouch, { passive: true });
+})();
+</script>
  <nav class="navbar">
     <div class="navbar__container">
       <div class="navbar__left">
